# talos-manipulation

./: .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: Settings_sobec.yaml  ros-mpc-pointing.yaml  ros_deburring_settings.yaml  settings_sobec.yaml
deburring-mpc/: CMakeLists.txt  README.md  package.xml
deburring-mpc/include/deburring_mpc/: fwd.hpp  mpc.hpp  ocp.hpp  python-fwd.hpp  python_fwd.hpp  robot_designer.hpp
deburring-mpc/python/: CMakeLists.txt  designer.cpp  main.cpp  mpc.cpp  ocp.cpp  robot_designer.cpp
deburring-mpc/python/deburring_mpc/: __init__.py
deburring-mpc/src/: designer.cpp  mpc-debug.cpp  mpc-params.cpp  mpc.cpp  mpc_debug.cpp  mpc_params.cpp  mpc_state_machine.cpp  mpc_variable_posture.cpp  ocp-cost-library.cpp  ocp-debug.cpp  ocp-params.cpp  ocp-problem-helper.cpp  ocp-problem-maker.cpp  ocp.cpp  ocp_cost_library.cpp  ocp_params.cpp  ocp_problem_helper.cpp  ocp_problem_maker.cpp  robot_designer.cpp
deburring-mpc/tests/: CMakeLists.txt  common.hpp  mpc_debug.cpp  mpc_debug.hpp  test_MPC.cpp  test_OCP.cpp
deburring-mpc/tests/archive/: data_MPC.txt  data_OCP.txt  talos.srdf  talos_reduced.urdf  test_settings.yaml
deburring-mpc/tests/factory/: robot_designer.cpp  robot_designer.hpp
deburring-ros-interface/: CMakeLists.txt  README.md  package.xml
deburring-ros-interface/config/: settings_controller.yaml  settings_ros_deburring.yaml
deburring-ros-interface/include/deburring_ros_interface/: custom_registration_utils.h  ros-mpc-interface.h  ros_interface.h
deburring-ros-interface/launch/: ros-mpc-basic.launch  talos_deburring.launch
deburring-ros-interface/src/: ros-mpc-interface.cpp  ros-mpc-pointing.cpp  ros_deburring.cpp  ros_interface.cpp
deburring-ros-interface/test/: ros-mpc-test.test  test_mpc_interface.py
include/talos_manipulation/: ros-mpc-interface.h
mpc-pointing/: CMakeLists.txt  package.xml
mpc-pointing/include/mpc-pointing/: designer.hpp  fwd.hpp  mpc.hpp  ocp.hpp  python-fwd.hpp
mpc-pointing/python/: CMakeLists.txt  designer.cpp  main.cpp  mpc.cpp  ocp.cpp
mpc-pointing/python/mpc_pointing/: __init__.py
mpc-pointing/src/: designer.cpp  mpc-debug.cpp  mpc-params.cpp  mpc.cpp  ocp-cost-library.cpp  ocp-debug.cpp  ocp-params.cpp  ocp-problem-helper.cpp  ocp-problem-maker.cpp  ocp.cpp
mpc-pointing/tests/: test_MPC.cpp  test_OCP.cpp
pyTalos/: bullet_Talos.py  compare_croc.py  debug_ocp.py  plotter.py  test_MPC.py  test_OCP.py  test_sobec.py
python/: TalosDeburringSimulation.py  test_sobec.py
ros-interface/: CMakeLists.txt  package.xml
ros-interface/include/ros-interface/: ros-mpc-interface.h
ros-interface/launch/: ros-mpc-basic.launch
ros-interface/src/: main.cpp  ros-mpc-interface.cpp  ros-mpc-pointing.cpp
ros-interface/test/: ros-mpc-test.test  test_mpc_interface.py
src/: main.cpp  ros-mpc-interface.cpp
