<?xml version="1.0"?>
<package format="2">
  <name>talos_manipulation</name>
  <version>0.0.0</version>
  <description>The talos_manipulation package</description>

  <maintainer email="cperrot@laas.fr">Côme Perrot</maintainer>
  <license>BSD 2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>realtime_tools</depend>
  <depend>eigen_conversions</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
