<?xml version="1.0"?>
<package format="2">
  <name>deburring_ros_interface</name>
  <version>0.0.0</version>
  <description>Ros interface for Talos manipulation MPC</description>

  <maintainer email="cperrot@laas.fr">Côme Perrot</maintainer>
  <license>BSD 2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>realtime_tools</depend>
  <depend>eigen_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>linear_feedback_controller_msgs</depend>
  <depend>deburring_mpc</depend>
  <depend>pal_statistics</depend>

  <build_depend>rostest</build_depend>

  <export>

  </export>
</package>
