<?xml version="1.0"?>
<package format="3">
  <name>mpc-pointing</name>
  <version>0.0.0</version>
  <description>MPC for manipulation tasks with Talos</description>
  <maintainer email="come.perrot@laas.fr">Côme Perrot</maintainer>
  <license>BSD</license>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend>boost</depend>
  <depend>crocoddyl</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
