<?xml version="1.0"?>
<package format="2">
  <name>ros-interface</name>
  <version>0.0.0</version>
  <description>Ros interface for Talos manipulation MPC</description>

  <maintainer email="cperrot@laas.fr">Côme Perrot</maintainer>
  <license>BSD 2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>realtime_tools</depend>
  <depend>eigen_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>ros_wbmpc_msgs</depend>

  <export>

  </export>
</package>
